# DynUp

./: .gitignore  Cargo.toml  LICENSE  README.md  client_config.toml  server_config.toml
config/: client_config.toml  server_config.toml
documentation/: Concept Draft.md  README.md
src/: main.rs
src/client/: client.rs
src/server/: db_access.rs  dns_bindings.rs  http_server.rs  server.rs
